Text interfaces and frame buffer drawing

--- a/PAWSC/PAWSC.csproj
+++ b/PAWSC/PAWSC.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="SkiaSharp" Version="3.119.0" />
+      <PackageReference Include="Spectre.Console" Version="0.50.1-preview.0.22" />
     </ItemGroup>
 
 </Project>
