--- a/PAWSC/PAWSC.csproj
+++ b/PAWSC/PAWSC.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BluetoothLE.Server.Linux" Version="1.0.0" />
       <PackageReference Include="Iot.Device.Bindings" Version="4.0.1" />
       <PackageReference Include="SkiaSharp" Version="3.119.0" />
       <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.119.0" />
