--- a/PAWSC/PAWSC.csproj
+++ b/PAWSC/PAWSC.csproj
@@ -10,12 +10,14 @@
     <ItemGroup>
       <PackageReference Include="BluetoothLE.Server.Linux" Version="1.0.0" />
       <PackageReference Include="Iot.Device.Bindings" Version="4.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.7.25380.108" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.7.25380.108" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-preview.7.25380.108" />
       <PackageReference Include="SkiaSharp" Version="3.119.0" />
       <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.119.0" />
       <PackageReference Include="Spectre.Console" Version="0.50.1-preview.0.22" />
 
       <!-- Explicit secure versions for transitive dependencies -->
-      <PackageReference Include="System.Text.Json" Version="8.0.5" />
     </ItemGroup>
 
     <!-- Package version constraints to prevent vulnerable versions -->
